// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emit events.zod.ts with PascalCase 1`] = `
"import { z } from 'zod';

export const CtaClickedSchema = z.object({ title: z.string() });

export const eventSchemas = {
  "cta_clicked": CtaClickedSchema,
} as const;
"
`;

exports[`emit events.zod.ts with camelCase (default) 1`] = `
"import { z } from 'zod';

export const ctaClickedSchema = z.object({ title: z.string() });

export const eventSchemas = {
  "cta_clicked": ctaClickedSchema,
} as const;
"
`;
